# stone

./: .arcconfig  .coveragerc  .gitignore  .pylintrc  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.rst  TODO.rst  bug_270_2.patch  codecov.yml  docutils-test-script.py  ez_setup.py  mypy-run.sh  mypy.ini  patch-tox-docutils-0.13.1.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  template_gen.py  tox.ini
.arc_lib/: .gitignore  __phutil_library_init__.php  __phutil_library_map__.php
.github/: pull_request_template.md
babelapi/: api.py  cli.py  compiler.py  data_type.py  generator.py  segmentation.py
babelsdk/: api.py  cli.py  compiler.py  data_type.py  segmentation.py
dev_work/: spec_1.stone  stone_cfg.stone  test.proto
doc/: builtin_generators.rst  evolve_spec.rst  generator_ref.rst  joke.rst  json_serializer.rst  lang_ref.rst  managing_large_specs.rst  managing_specs.rst  network_protocol.rst  using_generator.rst  wire_format.rst
docs/: backend_ref.rst  builtin_backends.rst  evolve_spec.rst  generator_ref.rst  json_serializer.rst  lang_ref.rst
dropbox-v2/: gen_python.sh  gen_server_validators.py
scripts/: release_note_generator.sh
stone/: __init__.py  __main__.py  api.py  backend.py  cli.py  cli_helpers.py  compiler.py  data_type.py  generator.py  ir.py
test/: backend_test_util.py  requirements.txt  run_tests.sh  test_api_route.py  test_babel.py  test_babel_internal.py  test_backend.py  test_cli.py  test_compiler.py  test_data_types.py  test_generator.py  test_js_client.py  test_output_manifest.py  test_stone.py  (+11 more)
(+187 files in other folders)
